@@ -2,9 +2,10 @@
 Version=1.0
 Encoding=UTF-8
 Name=KKEditQT - Root
-Comment=A GTK2 text editor inspired ( but not based on ) BBEdit.
+Comment=A QT5 text editor inspired ( but not based on ) BBEdit.
 Terminal=false
 Type=Application
 Categories=System;
 MimeType=text/plain
 Icon=KKEditQTRoot.png
+Exec=gtksu -- kkeditqt -m 
