@@ -1,4 +1,5 @@
 0.5.2
+Minor makefile changes.
 Added about qt menu item.
 Done plugin prefs.
 Handle broken plugins.
